--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,4 +1,5 @@
 @import './custom-properties.css';
+@import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@1&display=swap');
 
 html {
   font-family: var(--font-family-sans);
@@ -8,7 +9,7 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
-  background: var(--color-white);
+  /*background: var(--color-white);*/
   color: var(--color-black);
   margin: 0;
 }
