--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,161 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, 
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+}
+
+.site-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main  {
+  flex-grow: 1;
+}
+
+.rhap_container {
+    background: rgb(22, 46, 103) !important;
+  }
+
+.rhap_time{
+    color:white !important;
+}
+
+
+.rhap_main-controls {
+    padding-right: 10px;
+}
+
+
+.rhap_main-controls-button svg {
+    color: white;
+}
+
+.rhap_volume-container {
+    padding-left: 10px;
+}
+
+.rhap_volume-container svg {
+    color: white;
+}
+
+  .rhap_progress-filled,
+.rhap_progress-indicator {
+  background-color: white !important;
+}
+
+.rhap_volume-filled {
+    background-color: white !important;
+}
+
+.rhap_volume-indicator{
+    background-color: white !important;
+}
+
+.rhap_progress-bar{
+    background: grey !important;
+}
+
+.rhap_volume-bar{
+    background: grey !important;
+}
+
+.audioSlider {
+    -webkit-appearance: none;
+    width: calc(100% - (var(--player-button-width) + var(--sound-button-width) + var(--space)));
+    height: .5em;
+    background-color: #e5e5e5;
+    border-radius: 5px;
+    background-size: 0% 100%;
+    background-image: linear-gradient(#DE5E97, #DE5E97);
+    background-repeat: no-repeat;
+    margin-right: var(--space);
+    background-size: 50%;
+  }
+  
+  .audioSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    transition: all .1s;
+    background-color: #a94672;
+  }
+  
+  .audioSlider::-moz-range-thumb {
+    -webkit-appearance: none;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    transition: all .1s;
+    background-color: #a94672;
+  }
+  
+  .audioSlider::-ms-thumb {
+    -webkit-appearance: none;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    transition: all .1s;
+    background-color: #a94672;
+  }
+  
+  .audioSlider::-webkit-slider-thumb:hover {
+    background-color: #943f65;
+  }
+  
+  .audioSlider:hover::-webkit-slider-thumb {
+    opacity: 1;
+  }
+  
+  .audioSlider::-moz-range-thumb:hover {
+    background-color: #943f65;
+  }
+  
+  .audioSlider:hover::-moz-range-thumb {
+    opacity: 1;
+  }
+  
+  .audioSlider::-ms-thumb:hover {
+    background-color: #943f65;
+  }
+  
+  .audioSlider:hover::-ms-thumb {
+    opacity: 1;
+  }
+  
+  .audioSlider::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+  
+  .audioSlider::-moz-range-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+  
+  .audioSlider::-ms-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+  
